# templatex

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: main.tex  references.bib
src/sections/: 00_title_page.tex  01_abstract.tex  02_introduction.tex  03_literature_review.tex  04_model.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  08_appendices.tex
